force-app/main/default/objects/Trip__c/fields/Host_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Host_Full_Name__c</fullName>
    <description>Formula field needed to display name in Lightning calendar instead of User ID</description>
    <formula>Host_Name_1__r.FirstName  &amp; &quot; &quot; &amp;  Host_Name_1__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Full Name</label>
    <type>Text</type>
</CustomField>