force-app/main/default/objects/Trip__c/fields/Host_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Host_Name_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Visitation_Planner</relationshipName>
    <type>Lookup</type>
</CustomField>