force-app/main/default/objects/Trip__c/fields/Host_Site_Phone__c.field-meta.xml
<CustomField>
    <fullName>Host_Site_Phone__c</fullName>
    <label>Host Site Phone</label>
    <type>Phone</type>
</CustomField>