force-app/main/default/objects/Trip__c/fields/Hotel_Preference__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Preference__c</fullName>
    <label>Hotel Preference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>