force-app/main/default/objects/Trip__c/fields/Is_Guest_List_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Guest_List_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirmation that the Attendee/Guest List is Complete.</description>
    <inlineHelpText>Confirmation that the Attendee/Guest List is Complete.</inlineHelpText>
    <label>Is Guest List Complete?</label>
    <type>Checkbox</type>
</CustomField>