force-app/main/default/objects/Trip__c/fields/ITSE__c.field-meta.xml
<CustomField>
    <fullName>ITSE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>IT Sales Executive</description>
    <inlineHelpText>IT Sales Executive</inlineHelpText>
    <label>CCE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Visitation_Planner3</relationshipName>
    <type>Lookup</type>
</CustomField>