force-app/main/default/objects/Trip__c/fields/Liko_Lifts__c.field-meta.xml
<CustomField>
    <fullName>Liko_Lifts__c</fullName>
    <label>Liko® Lifts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Trip_Location__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Liko® Mobile Lifts</fullName>
            </value>
            <value>
                <fullName>Likorall™ Overhead Lift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>