force-app/main/default/objects/Trip__c/fields/LIKO_Products__c.field-meta.xml
<CustomField>
    <fullName>LIKO_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Safe Patient Handling (LIKO)</description>
    <inlineHelpText>Safe Patient Handling (LIKO)</inlineHelpText>
    <label>Safe Patient Handling</label>
    <type>Checkbox</type>
</CustomField>