force-app/main/default/objects/Trip__c/fields/LIKO_Training__c.field-meta.xml
<CustomField>
    <fullName>LIKO_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LIKO Training</description>
    <inlineHelpText>LIKO Training</inlineHelpText>
    <label>Safe Patient Handling Training</label>
    <type>Checkbox</type>
</CustomField>