force-app/main/default/objects/Trip__c/fields/Med_Surg__c.field-meta.xml
<CustomField>
    <fullName>Med_Surg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Med-Surg</label>
    <type>Checkbox</type>
</CustomField>