force-app/main/default/objects/Trip__c/fields/Mortara__c.field-meta.xml
<CustomField>
    <fullName>Mortara__c</fullName>
    <label>Mortara</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mortara</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>