force-app/main/default/objects/Trip__c/fields/Mortaracheck__c.field-meta.xml
<CustomField>
    <fullName>Mortaracheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mortara Products</description>
    <inlineHelpText>Mortara Products</inlineHelpText>
    <label>Mortara</label>
    <type>Checkbox</type>
</CustomField>