force-app/main/default/objects/Trip__c/fields/MS__c.field-meta.xml
<CustomField>
    <fullName>MS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Mobility Specialist</description>
    <inlineHelpText>Mobility Specialist</inlineHelpText>
    <label>MS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Visitation_Planner4</relationshipName>
    <type>Lookup</type>
</CustomField>