force-app/main/default/objects/Trip__c/fields/Nearest_Station_Airport_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Station_Airport_to_Customer__c</fullName>
    <label>Nearest Station/Airport to Customer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>