force-app/main/default/objects/Trip__c/fields/NNC_Navicare_Nurse_Call__c.field-meta.xml
<CustomField>
    <fullName>NNC_Navicare_Nurse_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NNC (Navicare Nurse Call)</label>
    <type>Checkbox</type>
</CustomField>