force-app/main/default/objects/Trip__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <defaultValue>&quot;Please advise Distributor/Business partner that they are responsible for making their own Air/Ground transportation arrangements.&quot;</defaultValue>
    <description>Participant Details: Distributor/Business Partner Information</description>
    <inlineHelpText>Participant Details: Distributor/Business Partner Information</inlineHelpText>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>