force-app/main/default/objects/Trip__c/fields/Note_Group_account_help__c.field-meta.xml
<CustomField>
    <fullName>Note_Group_account_help__c</fullName>
    <defaultValue>&apos;If JDE Account is not created in Salesforce please use Group Account.&apos;</defaultValue>
    <label>Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>