force-app/main/default/objects/Trip__c/fields/Off_Site_Tour__c.field-meta.xml
<CustomField>
    <fullName>Off_Site_Tour__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Off-Site Tour</label>
    <type>Checkbox</type>
</CustomField>