force-app/main/default/objects/Trip__c/fields/Opp_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage__c</fullName>
    <formula>Opportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>