force-app/main/default/objects/Trip__c/fields/Opportunity_2__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Additional Opportunity for CEC Trip</description>
    <inlineHelpText>Additional Opportunity for CEC Trip</inlineHelpText>
    <label>Opportunity 2</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>CEC_Visitation_Planner1</relationshipName>
    <type>Lookup</type>
</CustomField>