force-app/main/default/objects/Trip__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Opportunity for CEC Trip</description>
    <inlineHelpText>Primary Opportunity for CEC Trip</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>CEC_Visitation_Planner</relationshipName>
    <type>Lookup</type>
</CustomField>