force-app/main/default/objects/Trip__c/fields/OR__c.field-meta.xml
<CustomField>
    <fullName>OR__c</fullName>
    <label>OR</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Trip_Location__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Allen Spine Table</fullName>
            </value>
            <value>
                <fullName>Aspen Surgical</fullName>
                <isActive>false</isActive>
                <label>Aspen Surgical</label>
            </value>
            <value>
                <fullName>Helion</fullName>
            </value>
            <value>
                <fullName>Trumpf Lighting</fullName>
            </value>
            <value>
                <fullName>Trumpf OR Table</fullName>
            </value>
            <value>
                <fullName>Trumpf TruPort Boom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>