force-app/main/default/objects/Trip__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>Additional Participants</description>
    <inlineHelpText>Additional Participants</inlineHelpText>
    <label>Other</label>
    <type>TextArea</type>
</CustomField>