force-app/main/default/objects/Trip__c/fields/Other_Integrations__c.field-meta.xml
<CustomField>
    <fullName>Other_Integrations__c</fullName>
    <label>Other Integrations</label>
    <type>TextArea</type>
</CustomField>