force-app/main/default/objects/Trip__c/fields/Other_Personnel__c.field-meta.xml
<CustomField>
    <fullName>Other_Personnel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Other Hill-Rom Co-Host or Support personnel</description>
    <inlineHelpText>Other Hill-Rom Co-Host or Support personnel</inlineHelpText>
    <label>Other Personnel</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Visitation_Planner5</relationshipName>
    <type>Lookup</type>
</CustomField>