force-app/main/default/objects/Trip__c/fields/Perinatal_Products__c.field-meta.xml
<CustomField>
    <fullName>Perinatal_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perinatal Products</label>
    <type>Checkbox</type>
</CustomField>