force-app/main/default/objects/Trip__c/fields/Physician_Airfare__c.field-meta.xml
<CustomField>
    <fullName>Physician_Airfare__c</fullName>
    <description>Physician Airfare Total Cost</description>
    <inlineHelpText>Physician Airfare Total Cost</inlineHelpText>
    <label>Physician Airfare $</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>