force-app/main/default/objects/Trip__c/fields/Physician_Ground__c.field-meta.xml
<CustomField>
    <fullName>Physician_Ground__c</fullName>
    <description>Physician Ground Total Cost</description>
    <inlineHelpText>Physician Ground Total Cost</inlineHelpText>
    <label>Physician Ground $</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>