force-app/main/default/objects/Trip__c/fields/Physician_Lodging__c.field-meta.xml
<CustomField>
    <fullName>Physician_Lodging__c</fullName>
    <description>Physician Lodging Total Cost</description>
    <inlineHelpText>Physician Lodging Total Cost</inlineHelpText>
    <label>Physician Lodging $</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>