force-app/main/default/objects/Trip__c/fields/Physician_Meals__c.field-meta.xml
<CustomField>
    <fullName>Physician_Meals__c</fullName>
    <description>Physician Meals Total Cost</description>
    <inlineHelpText>Physician Meals Total Cost</inlineHelpText>
    <label>Physician Meals $</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>