force-app/main/default/objects/Trip__c/fields/Physician_Total__c.field-meta.xml
<CustomField>
    <fullName>Physician_Total__c</fullName>
    <description>Total CEC Cost for Physician</description>
    <formula>Physician_Airfare__c + Physician_Ground__c + Physician_Lodging__c + Physician_Meals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total CEC Cost for Physician</inlineHelpText>
    <label>Physician Total $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>