force-app/main/default/objects/Trip__c/fields/Pick_Up_Address__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Address__c</fullName>
    <label>Pick-Up Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>