force-app/main/default/objects/Trip__c/fields/Pick_Up_Time_Local__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Time_Local__c</fullName>
    <label>Pick-Up Time (Local)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>