force-app/main/default/objects/Trip__c/fields/PME__c.field-meta.xml
<CustomField>
    <fullName>PME__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Patient Monitoring Executives</description>
    <inlineHelpText>Patient Monitoring Executives</inlineHelpText>
    <label>PME</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Visitation_PlannerPRVG</relationshipName>
    <type>Lookup</type>
</CustomField>