force-app/main/default/objects/Trip__c/fields/PO_Value_2__c.field-meta.xml
<CustomField>
    <fullName>PO_Value_2__c</fullName>
    <description>Additional Opportunity PO Value for CEC Trip</description>
    <formula>Opportunity_2__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Additional Opportunity PO Value for CEC Trip</inlineHelpText>
    <label>PO Value 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>