force-app/main/default/objects/Trip__c/fields/PO_Value_4__c.field-meta.xml
<CustomField>
    <fullName>PO_Value_4__c</fullName>
    <formula>Opportunity_4__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Value 4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>