force-app/main/default/objects/Trip__c/fields/PO_Value__c.field-meta.xml
<CustomField>
    <fullName>PO_Value__c</fullName>
    <description>Primary Opportunity PO Value for CEC Trip</description>
    <formula>Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Primary Opportunity PO Value for CEC Trip</inlineHelpText>
    <label>PO Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>