force-app/main/default/objects/Trip__c/fields/Post_Acute_Care__c.field-meta.xml
<CustomField>
    <fullName>Post_Acute_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Acute Care</label>
    <type>Checkbox</type>
</CustomField>