force-app/main/default/objects/Trip__c/fields/Primary_Mode_of_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mode_of_Transportation__c</fullName>
    <label>Primary Mode of Transportation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Air</fullName>
            </value>
            <value>
                <fullName>Personal Vehicle</fullName>
            </value>
            <value>
                <fullName>Bus/Car/Van</fullName>
            </value>
            <value>
                <fullName>Rental car</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Taxi / Minibus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>