force-app/main/default/objects/Trip__c/fields/Product_Solutions_Care_Area__c.field-meta.xml
<CustomField>
    <fullName>Product_Solutions_Care_Area__c</fullName>
    <description>CEC Product Solutions by Care Area.</description>
    <inlineHelpText>CEC Product Solutions by Care Area.</inlineHelpText>
    <label>Product Solutions Care Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Trip_Location__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Allen</fullName>
            </value>
            <value>
                <fullName>Aspen Surgical</fullName>
            </value>
            <value>
                <fullName>Bariatric Products</fullName>
            </value>
            <value>
                <fullName>Care Communications</fullName>
            </value>
            <value>
                <fullName>Connectivity Workflow Solutions</fullName>
            </value>
            <value>
                <fullName>Emergency Products</fullName>
            </value>
            <value>
                <fullName>Emergency Services</fullName>
            </value>
            <value>
                <fullName>Extended/Home Care</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>ICU</fullName>
            </value>
            <value>
                <fullName>Maternal Products</fullName>
            </value>
            <value>
                <fullName>Med-Surg</fullName>
            </value>
            <value>
                <fullName>Modular Wall</fullName>
            </value>
            <value>
                <fullName>Mortara</fullName>
            </value>
            <value>
                <fullName>Perinatal Products</fullName>
            </value>
            <value>
                <fullName>R&amp;D</fullName>
            </value>
            <value>
                <fullName>Radiology C-Arm</fullName>
            </value>
            <value>
                <fullName>Respiratory</fullName>
            </value>
            <value>
                <fullName>Safe Patient Handling</fullName>
            </value>
            <value>
                <fullName>Safe Patient Handling Training</fullName>
            </value>
            <value>
                <fullName>Sales Training</fullName>
            </value>
            <value>
                <fullName>Science of Frames Tour</fullName>
            </value>
            <value>
                <fullName>Science of Surface Lab Tour</fullName>
            </value>
            <value>
                <fullName>Selke Plant Tour</fullName>
            </value>
            <value>
                <fullName>Technical Breakdown</fullName>
            </value>
            <value>
                <fullName>Trumpf</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Welch Allyn</fullName>
            </value>
            <value>
                <fullName>Wound Therapy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>