force-app/main/default/objects/Trip__c/fields/Proposed_Trip_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Trip_Date__c</fullName>
    <description>This Date is only a suggested date. The trip will be Confirmed by your CEC Coordinator.</description>
    <inlineHelpText>This Date is only a suggested date. The trip will be Confirmed by your CEC Coordinator.</inlineHelpText>
    <label>Proposed Trip Date</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>