force-app/main/default/objects/Trip__c/fields/R_D__c.field-meta.xml
<CustomField>
    <fullName>R_D__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R&amp;D</description>
    <inlineHelpText>R&amp;D</inlineHelpText>
    <label>R&amp;D</label>
    <type>Checkbox</type>
</CustomField>