force-app/main/default/objects/Trip__c/fields/RBE__c.field-meta.xml
<CustomField>
    <fullName>RBE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SmartCare RBE</description>
    <inlineHelpText>SmartCare RBE</inlineHelpText>
    <label>RBE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Visitation_Plannerchu0</relationshipName>
    <type>Lookup</type>
</CustomField>