force-app/main/default/objects/Trip__c/fields/Reason_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cancellation__c</fullName>
    <description>Information about why the Trip was Cancelled.</description>
    <inlineHelpText>Document why the Trip was Cancelled.</inlineHelpText>
    <label>Reason for Cancellation</label>
    <type>TextArea</type>
</CustomField>