force-app/main/default/objects/Trip__c/fields/Rental_Therapy__c.field-meta.xml
<CustomField>
    <fullName>Rental_Therapy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wound Therapy</label>
    <type>Checkbox</type>
</CustomField>