force-app/main/default/objects/Trip__c/fields/Reporting__c.field-meta.xml
<CustomField>
    <fullName>Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reporting</label>
    <type>Checkbox</type>
</CustomField>