force-app/main/default/objects/Trip__c/fields/Respiratorypick__c.field-meta.xml
<CustomField>
    <fullName>Respiratorypick__c</fullName>
    <label>Respiratory</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Trip_Location__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Vest®</fullName>
            </value>
            <value>
                <fullName>The VisiVest</fullName>
            </value>
            <value>
                <fullName>MetaNeb</fullName>
            </value>
            <value>
                <fullName>Monarch</fullName>
            </value>
            <value>
                <fullName>Life2000® Ventilation System</fullName>
            </value>
            <value>
                <fullName>Synclara Cough System</fullName>
            </value>
            <value>
                <fullName>Volara System</fullName>
            </value>
            <value>
                <fullName>VitalCough</fullName>
                <isActive>false</isActive>
                <label>VitalCough</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>