force-app/main/default/objects/Trip__c/fields/Room_Design_Workshop__c.field-meta.xml
<CustomField>
    <fullName>Room_Design_Workshop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Room Design Workshop(Fee Based)</label>
    <type>Checkbox</type>
</CustomField>