force-app/main/default/objects/Trip__c/fields/RoomBuilder_Overview__c.field-meta.xml
<CustomField>
    <fullName>RoomBuilder_Overview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RoomBuilder Overview</label>
    <type>Checkbox</type>
</CustomField>