force-app/main/default/objects/Trip__c/fields/RoomBuilder_Plus__c.field-meta.xml
<CustomField>
    <fullName>RoomBuilder_Plus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RoomBuilder Plus</label>
    <type>Checkbox</type>
</CustomField>