force-app/main/default/objects/Trip__c/fields/SA__c.field-meta.xml
<CustomField>
    <fullName>SA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Associate</description>
    <inlineHelpText>Sales Associate</inlineHelpText>
    <label>SA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Visit_Planner2</relationshipName>
    <type>Lookup</type>
</CustomField>