force-app/main/default/objects/Trip__c/fields/Sales_Training__c.field-meta.xml
<CustomField>
    <fullName>Sales_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sales Training</description>
    <inlineHelpText>Sales Training</inlineHelpText>
    <label>Sales Training</label>
    <type>Checkbox</type>
</CustomField>