force-app/main/default/objects/Trip__c/fields/Science_of_Surface_Lab_Tour__c.field-meta.xml
<CustomField>
    <fullName>Science_of_Surface_Lab_Tour__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Science of Surface Lab Tour</label>
    <type>Checkbox</type>
</CustomField>