force-app/main/default/objects/Trip__c/fields/SCM__c.field-meta.xml
<CustomField>
    <fullName>SCM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Senior Clinical Manager</description>
    <inlineHelpText>Senior Clinical Manager</inlineHelpText>
    <label>SCM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Visitation_PlannerSixP</relationshipName>
    <type>Lookup</type>
</CustomField>