force-app/main/default/objects/Trip__c/fields/Selke_Plant_Tour__c.field-meta.xml
<CustomField>
    <fullName>Selke_Plant_Tour__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selke Plant Tour</label>
    <type>Checkbox</type>
</CustomField>