force-app/main/default/objects/Trip__c/fields/Specific_Pick_Up_point_at_Facility__c.field-meta.xml
<CustomField>
    <fullName>Specific_Pick_Up_point_at_Facility__c</fullName>
    <label>Specific Pick-Up point at Facility</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>