force-app/main/default/objects/Trip__c/fields/SSM__c.field-meta.xml
<CustomField>
    <fullName>SSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service Solutions Managers</description>
    <inlineHelpText>Service Solutions Managers</inlineHelpText>
    <label>SSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Visitation_PlannerPQXp</relationshipName>
    <type>Lookup</type>
</CustomField>