force-app/main/default/objects/Trip__c/fields/Staff_Locating__c.field-meta.xml
<CustomField>
    <fullName>Staff_Locating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staff Locating</label>
    <type>Checkbox</type>
</CustomField>