force-app/main/default/objects/Trip__c/fields/Stretchers__c.field-meta.xml
<CustomField>
    <fullName>Stretchers__c</fullName>
    <label>Stretchers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Trip_Location__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Electric</fullName>
                <isActive>false</isActive>
                <label>Electric</label>
            </value>
            <value>
                <fullName>OB GYN</fullName>
            </value>
            <value>
                <fullName>Procedural</fullName>
            </value>
            <value>
                <fullName>Procedural Stretcher with Intellidrive</fullName>
                <isActive>false</isActive>
                <label>Procedural Stretcher with Intellidrive</label>
            </value>
            <value>
                <fullName>Surgical Stretcher</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>