force-app/main/default/objects/Trip__c/fields/Support_1__c.field-meta.xml
<CustomField>
    <fullName>Support_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Visitation_Planner6</relationshipName>
    <type>Lookup</type>
</CustomField>