force-app/main/default/objects/Trip__c/fields/Support_2__c.field-meta.xml
<CustomField>
    <fullName>Support_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Visitation_Planner7</relationshipName>
    <type>Lookup</type>
</CustomField>