force-app/main/default/objects/Trip__c/fields/Support_3__c.field-meta.xml
<CustomField>
    <fullName>Support_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Visitation_Planner8</relationshipName>
    <type>Lookup</type>
</CustomField>