force-app/main/default/objects/Trip__c/fields/Technical_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Technical_Breakdown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Technical Breakdown</label>
    <type>Checkbox</type>
</CustomField>